kubernetes/main/apps/database/emqx/cluster/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emqx-dashboard
spec:
  ingressClassName: nginx
  rules:
    - host: emqx.nasenov.dev
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: emqx-dashboard
                port:
                  name: dashboard
  tls:
  - hosts:
    - emqx.nasenov.dev
